--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -14,7 +14,7 @@
     background: #FFFFFF;
     border-radius: 8px;
     height: 80%;
-    width: 35%;
+    /* width: 35%; */
   }
   
   @media (min-width: 320px) and (max-width: 480px) {
