--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -7,7 +7,7 @@
     border: none;
     border-radius: 0;
     padding: 5%;
-    width: 80%;
+    width: 100%;
     font-size: 1em;
   }
   
@@ -19,9 +19,9 @@
     color: #fff !important;
     text-transform: uppercase;
     text-decoration: none;
-    background: #2979FF;
+    background: #1ED760;
     padding: 20px;
     display: inline-block;
     border: none;
-    width: 20%;
+    width: 30%;
   }
