--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -13,6 +13,7 @@
     height: 100vh;
     align-items: center;
     background-color: black;
+    width: 210px;
   }
   
   .joinInnerContainer {
@@ -33,15 +34,15 @@
   }
   
   .button {
-      color: #fff !important;
-      text-transform: uppercase;
-      text-decoration: none;
-      background: #2979FF;
-      padding: 20px;
-      border-radius: 5px;
-      display: inline-block;
-      border: none;
-      width: 100%;
+    background: #1ED760;
+    border: none;
+    border-radius: 5px;
+    color: #fff !important;
+    display: inline-block;
+    padding: 20px;
+    text-transform: uppercase;
+    text-decoration: none;
+    width: 100%;
   }
   
   .mt-20 {
