--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,18 +1,18 @@
 .main-wrapper-landing-page {
-    width: 100%;
-    height: 100vh;
-    margin: 0 auto;
-    background-color: black;
     align-items: center;
+    background-color: black;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    height: 100%;
+    margin: 0 auto;
+    width: 100%;
 }
 
 .app-title {
     color: white;
     font: 'Segoe UI';
-    font-size: 160px;
+    font-size: 120px;
     padding-bottom: 30px;
 }
 
@@ -37,12 +37,19 @@
 }
 
 .login-description {
+    background-color: #1ED760;
+    border-radius: 5px;
     color: white;
     display: flex;
     font-size: 20px;
     justify-content: center;
-    background-color: #1ED760;
     text-align: center;
     padding: 12px 40px;
-    border-radius: 5px;
+}
+
+@media (min-width: 320px) {
+    .main-wrapper-landing-page {
+        height: 100vh;
+        width: 100vw;
+    }
 }
