--- a/src/components/TextContainer/TextContainer.css
+++ b/src/components/TextContainer/TextContainer.css
@@ -1,9 +1,10 @@
 .textContainer {
     display: flex;
     flex-direction: column;
-    margin-left: 100px;
+    margin-left: 10px;
     color: white;
     height: 60%;
+    width: 20%;
     justify-content: space-between;
   }
   
