--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -1,20 +1,20 @@
 .outerContainer {
+  align-items: center;
+  background-color: black;
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 100vh;
-  width: 40%;
-  background-color: black;
+  width: 96%;
+  padding-left: 20px;
 }
   
 .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   background: #FFFFFF;
   border-radius: 8px;
-  height: 80%;
-  /* width: 35%; */
+  display: flex;
+  flex-direction: column;
+  height: 600px;
+  justify-content: space-between;
 }
   
 @media (min-width: 320px) and (max-width: 480px) {
@@ -23,8 +23,8 @@
   }
 
   .container {
-    width: 100%;
     height: 100%;
+    width: 100%;
   }
 }
 
