--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,15 +1,14 @@
 .main-wrapper {
-    width: 100%;
-    height: 100vh;
-    margin: 0 auto;
-    background-color: black;
     align-items: center;
+    background-color: black;
     display: flex;
     flex-direction: row;
-    /* justify-content: space-around; */
+    height: 100vh;
     justify-content: center;
+    margin: 0 auto;
+    width: 100%;
 }
 
 .dashboard-item {
-    padding: 0px 50px;
+    width: 420px;
 }
