--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -7,29 +7,28 @@
 }
   
 .joinOuterContainer {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  height: 100vh;
   align-items: center;
   background-color: black;
-  width: 210px;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  text-align: center;
 }
   
 .joinInnerContainer {
-  width: 100%;
+  width: 300px;
 }
 
 .joinInput {
   border-radius: 0;
   padding: 15px 20px;
-  width: 100%;
+  width: 300px;
 }
 
 .heading {
+  border-bottom: 4px groove white;
   color: white;
   padding-bottom: 10px;
-  border-bottom: 4px groove white;
 }
 
 .button {
@@ -41,11 +40,12 @@
   padding: 20px;
   text-transform: uppercase;
   text-decoration: none;
-  width: 100%;
+  width: 300px;
 }
 
 .button:hover {
   cursor: pointer;
+  filter: brightness(70%);
 }
 
 .mt-20 {
