--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -3,7 +3,7 @@
     background-color: black;
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    /* height: 100vh; */
     justify-content: center;
     margin: 0 auto;
     width: 100%;
