--- a/src/components/Pomodoro/Pomodoro.css
+++ b/src/components/Pomodoro/Pomodoro.css
@@ -12,7 +12,7 @@
 
 .countdown {
     background-color: #1ED760;
-    color: black;
+    /* color: black; */
     margin-left: 2px;
     padding: 0.5px 2px 3.5px 2px;
 }
@@ -53,3 +53,18 @@
 .controlButtons-pizzaslice:hover {
     opacity: 0.7;
 }
+
+.iconsSpacing {
+    padding: 0px 4px;
+}
+
+.seasonStyling {
+    background-color: #F37D0F;
+    border-color: #F37D0F;
+}
+
+.seasonStylingAlt {
+    background-color: #FFE01B;
+    border-color: #FFE01B;
+}
+
