added Halloween mode, refactored App.js from class to functional component, refactored code

--- a/src/components/InfoBar/InfoBar.css
+++ b/src/components/InfoBar/InfoBar.css
@@ -28,3 +28,11 @@
 .onlineIcon {
   margin-right: 5%;
 }
+
+.seasonStyling {
+  background: #F37D0F;
+}
+
+.seasonStylingAlt {
+  background: #FFE01B;
+}
