--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -29,3 +29,11 @@ input:focus, textarea:focus, select:focus{
 .sendButton:hover {
   cursor: pointer;
 }
+
+.seasonStyling {
+  background: #F37D0F;
+}
+
+.seasonStylingAlt {
+  background: #FFE01B;
+}
