--- a/src/components/JoinForm/JoinForm.css
+++ b/src/components/JoinForm/JoinForm.css
@@ -13,7 +13,6 @@
     background: #1ED760;
     border: none;
     border-radius: 5px;
-    color: black !important;
     display: inline-block;
     padding: 20px;
     text-transform: uppercase;
@@ -22,11 +21,14 @@
 }
 
 .seasonStyling {
-    color: #F37D0F;
+    background: #F37D0F;
 }
 
-    
-  
+.seasonStylingAltHeader {
+    border-bottom: 4px groove #FFE01B;
+    background-color: black;
+}
+
 .button:hover {
     cursor: pointer;
     filter: brightness(70%);
@@ -34,7 +36,7 @@
 
 button:focus {
     outline: 0;
-  }
+}
   
 .mt-20 {
     margin-top: 20px;
