--- a/src/components/Pomodoro/Pomodoro.css
+++ b/src/components/Pomodoro/Pomodoro.css
@@ -7,7 +7,8 @@
 }
 
 .controlButtons:hover {
-    opacity: 0.7;
+    cursor: pointer;
+    opacity: 0.7;    
 }
 
 .countdown {
@@ -51,6 +52,7 @@
 }
 
 .controlButtons-pizzaslice:hover {
+    cursor: pointer;
     opacity: 0.7;
 }
 
