--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,6 +1,8 @@
 .main-wrapper-landing-page {
     align-items: center;
     background-color: black;
+    background-image: url("../../images/spotifyLandingPageBackgroundChillHop.jpg");
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,16 +12,16 @@
 }
 
 .app-title {
-    color: white;
+    color: black;
     font: 'Segoe UI';
     font-size: 120px;
-    padding-bottom: 30px;
 }
 
 .app-description {
-    color: white;
+    color: black;
     font-size: 24px;
-    padding-bottom: 30px;
+    font-weight: 900;
+    padding-bottom:10px;
 }
 
 .login-button {
@@ -39,12 +41,19 @@
 .login-description {
     background-color: #1ED760;
     border-radius: 5px;
-    color: white;
+    color: black;
     display: flex;
     font-size: 20px;
     justify-content: center;
     text-align: center;
     padding: 12px 40px;
+}
+
+.footer {
+    bottom: 10px;
+    font-size: 16px;
+    font-weight: 400;
+    position: fixed;
 }
 
 @media (min-width: 320px) {
