--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -12,8 +12,9 @@
 }
 
 .app-title {
-    color: black;
-    font: 'Segoe UI';
+    color: white;
+    /* font: 'Segoe UI'; */
+    font-family: 'Segoe UI', sans-serif;
     font-size: 120px;
 }
 
@@ -21,7 +22,7 @@
     color: black;
     font-size: 24px;
     font-weight: 900;
-    padding-bottom:10px;
+    padding-bottom: 30px;
 }
 
 .login-button {
