changing font in all components to be compatible with apple devices

--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
-  font-family: 'Segoe UI';
+  /* font-family: 'Segoe UI'; */
+  font-family: 'Segoe UI', sans-serif;
 }
   
 .joinOuterContainer {
