--- a/src/components/Pomodoro/Pomodoro.css
+++ b/src/components/Pomodoro/Pomodoro.css
@@ -15,7 +15,8 @@
     background-color: #1ED760;
     color: black;
     margin-left: 2px;
-    padding: 2px 2px 4px 2px;
+    margin-top: 16px;
+    padding: 5px 4px 5px 4px;
 }
 
 .pomodoroPanel {
