--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -9,7 +9,7 @@
     align-items: center;
     display: flex;
     flex-direction: row;
-    /* height: 100vh; */
+    height: 100vh;
     justify-content: center;
     margin: 0 auto;
     width: 100%;
