--- a/src/components/JoinForm/JoinForm.css
+++ b/src/components/JoinForm/JoinForm.css
@@ -1,4 +1,3 @@
-
 .heading {
     border-bottom: 4px groove white;
     color: white;
@@ -17,6 +16,17 @@
     padding: 20px;
     text-decoration: none;
     width: 300px;
+}
+
+.icon-scroll-chat {
+    animation-duration: 5s;
+    color: white;
+    padding-top: 40px;
+}
+
+.icon-scroll-chat:hover {
+    cursor: pointer;
+    opacity: 0.7;
 }
 
 .seasonStyling {
@@ -39,7 +49,7 @@ button:focus {
 .mt-20 {
     margin-top: 20px;
 }
-  
+
 @media (min-width: 320px) and (max-width: 480px) {
     .joinOuterContainer {
       height: 100%;
