--- a/src/components/Pomodoro/Pomodoro.css
+++ b/src/components/Pomodoro/Pomodoro.css
@@ -16,13 +16,14 @@
     color: black;
     margin-left: 2px;
     margin-top: 16px;
-    padding: 5px 4px 5px 4px;
+    padding: 3.3px 4px 3.3px 4px;
 }
 
 .pomodoroPanel {
     align-items: center;
     display: flex;
     justify-content: center;
+    padding-bottom: 80px;
 }
 
 .pomodoroHeader {
@@ -53,6 +54,16 @@
 }
 
 .controlButtons-pizzaslice:hover {
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+.icon-scroll {
+    animation-duration: 5s;
+    color: white;
+}
+
+.icon-scroll:hover {
     cursor: pointer;
     opacity: 0.7;
 }
