switched back to dev, changed chevron styling

--- a/src/components/JoinForm/JoinForm.css
+++ b/src/components/JoinForm/JoinForm.css
@@ -21,7 +21,7 @@
 .icon-scroll-chat {
     animation-duration: 5s;
     color: white;
-    padding-top: 40px;
+    margin-top: 60px;
 }
 
 .icon-scroll-chat:hover {
