--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -15,13 +15,16 @@
     color: white;
     font-family: 'Segoe UI', sans-serif;
     font-size: 120px;
+    padding-bottom: 20px;
+    -webkit-text-stroke: 1px black;
 }
 
 .app-description {
-    color: black;
-    font-size: 24px;
+    color: white;
+    font-size: 28px;
     font-weight: 700;
     padding-bottom: 30px;
+    -webkit-text-stroke: 1px black;
 }
 
 .login-button {
