--- a/src/components/TopSongs/TopSongs.css
+++ b/src/components/TopSongs/TopSongs.css
@@ -26,6 +26,23 @@
     filter: brightness(70%);
 }
 
+.songsAndArtistsButton {
+    background: #1ED760;
+    border: none;
+    border-radius: 5px;
+    display: inline-block;
+    font-size: 32px;
+    margin: 0px 20px;    
+    padding: 4px;
+    text-decoration: none;
+    min-width: 100px;
+}
+
+.songsAndArtistsButton:hover {
+    cursor: pointer;
+    filter: brightness(70%);
+}
+
 .songsTable {
     color: white;
     padding: 0px 80px;
@@ -37,7 +54,7 @@
     border-radius: 1px;
     display: inline-block;
     font-size: 16px;
-    margin: 0px 4px;    
+    margin: 2px 4px;
     text-decoration: none;
     width: 30px;
 }
@@ -48,21 +65,6 @@
 }  
 .columnDescriptions {
     padding-bottom: 20px;
-}
-
-.tooltips {
-    max-width: 400px;
-}
-
-.tooltip {
-    background: #1ED760;
-    border: none;
-    border-radius: 1px;
-    display: inline-block;
-    font-size: 16px;
-    margin: 0px 4px;  
-    padding: 2px 10px;  
-    text-decoration: none;
 }
 
 .seasonStyling {
