refactored code to flow more efficiently, added pause/unpause button, and business logic when podcasts/shows are played instead of music

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -28,6 +28,7 @@ input:focus, textarea:focus, select:focus{
 
 .sendButton:hover {
   cursor: pointer;
+  filter: brightness(70%);
 }
 
 .seasonStyling {
