--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -24,7 +24,7 @@
 .skipbuttons {
     background-color: #1ED760;
     border: 4px solid #1ED760;
-    margin: 0px 16px;
+    margin: 0px 8px;
     outline: none;
 }
 
@@ -35,17 +35,22 @@
 
 .nowPlayingName {
     font-size: 20px;
-    margin-bottom: 8px;
+    margin-bottom: 4px;
     color: white;
 }
 
 .nowPlayingArtists {
-    margin-bottom: 8px;
+    margin-bottom: 4px;
     color: white;
 }
 
 .nowPlayingAlbum {
-    margin-bottom: 8px;
+    margin-bottom: 4px;
+    color: white;
+}
+
+.shuffleRepeatState {
+    margin-bottom: 4px;
     color: white;
 }
 
@@ -60,9 +65,9 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    height: 330px;
+    height: 300px;
     justify-content: center;
-    width: 330px;
+    width: 300px;
 }
 
 .nowPlayingSide {
