updated README.md documentation, fixed TopSongs css stylings, made token as a prop

--- a/src/components/TopSongs/TopSongs.css
+++ b/src/components/TopSongs/TopSongs.css
@@ -1,3 +1,12 @@
+.topSongs {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+    width: 100vw;
+}
+
 .songsTableTitle {
     color: white;
     font-size: 36px;
