--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -16,9 +16,7 @@
 .swatchesStyles {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
-    margin-left: -60px;
-    margin-top: 10px;
+    margin: 10px 0px 10px -60px;
 }
 
 .skipbuttons {
@@ -65,10 +63,10 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    height: 300px;
+    height: 360px;
     justify-content: center;
-    margin-bottom: 20px;
-    width: 300px;
+    /* margin-bottom: 20px; */
+    width: 360px;
 }
 
 .nowPlayingSide {
