--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -22,11 +22,11 @@
 .seasonSelect {
     background-color: #F37D0F;
     border: 4px solid #F37D0F;
-    margin-bottom: 2px;
 }
 
 .seasonSelect:hover {
     cursor: pointer;
+    filter: brightness(70%);
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
