--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
   /* font-family: 'Segoe UI'; */
-  font-family: 'Segoe UI', sans-serif;
+  font-family: 'Segoe UI', '-apple-system', 'HelveticaNeue', sans-serif;
 }
   
 .joinOuterContainer {
@@ -9,17 +9,9 @@
   display: flex;
   height: 100vh;
   justify-content: center;
-  padding-bottom: 100px;
   text-align: center;
 }
   
 .joinInnerContainer {
-  width: 300px;
-}
-
-.joinInput {
-  border: black;
-  border-radius: 5px;
-  padding: 15px 20px;
-  width: 300px;
+  width: 320px;
 }
