--- a/src/components/JoinForm/JoinForm.css
+++ b/src/components/JoinForm/JoinForm.css
@@ -13,10 +13,18 @@
     border: none;
     border-radius: 5px;
     display: inline-block;
+    margin-bottom: 30px;
     padding: 20px;
     text-decoration: none;
-    width: 300px;
+    width: 320px;
 }
+
+.joinInput {
+    border: black;
+    border-radius: 5px;
+    padding: 15px 20px;
+    width: 320px;
+  }
 
 .icon-scroll-chat {
     animation-duration: 5s;
@@ -50,7 +58,7 @@ button:focus {
     margin-top: 20px;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (min-width: 330px) and (max-width: 480px) {
     .joinOuterContainer {
       height: 100%;
     }
