--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -16,12 +16,13 @@
 .swatchesStyles {
     display: flex;
     justify-content: center;
-    margin: 10px 0px 10px -60px;
+    margin: 8px 0px 8px -60px;
 }
 
 .skipbuttons {
-    background-color: #1ED760;
-    border: 4px solid #1ED760;
+    background-color: transparent;
+    border: 2px solid transparent;
+    font-size: 20px;
     margin: 0px 4px;
     outline: none;
 }
@@ -48,8 +49,9 @@
 }
 
 .shuffleRepeatState {
-    margin-bottom: 6px;
     color: white;
+    font-size: 14px;
+    margin-bottom: 6px;
 }
 
 .nowPlayingStatus {
@@ -108,10 +110,6 @@
 .seasonStylingAlt {
     background-color: #FFE01B;
     border-color: #FFE01B;
-}
-
-.controlButtonsColouring {
-    color: black;
 }
 
 .noMusicPlayingMessage {
