--- a/src/components/Userslist/Userslist.css
+++ b/src/components/Userslist/Userslist.css
@@ -5,13 +5,16 @@
   height: 60%;
   justify-content: space-between;
   margin-left: 15px;
-  width: 20%;
+  width: 26%;
 }
 
 .activeContainer {
   align-items: center;
   display: flex;
   margin-bottom: 50%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .activeItem {
@@ -20,15 +23,5 @@
 }
 
 .activeContainer img {
-  padding-left: 10px;
-}
-
-.textContainer h1 {
-  margin-bottom: 0px;
-}
-
-@media (min-width: 320px) and (max-width: 1200px) {
-  .textContainer {
-    display: none;
-  }
+  padding-right: 4px;
 }
