cleaned up code, improved README.md

--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -54,7 +54,7 @@
     margin-bottom: 6px;
 }
 
-.nowPlayingStatus {
+.nowPlayingPanel {
     align-items: center;
     color: white;
     display: flex;
