--- a/src/components/TopSongs/TopSongs.css
+++ b/src/components/TopSongs/TopSongs.css
@@ -24,6 +24,7 @@
     border: none;
     border-radius: 5px;
     display: inline-block;
+    font-size: 16px;
     margin: 0px 20px;    
     padding: 10px;
     text-decoration: none;
