refactored landing page stylings, added Todo list in README.md

--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,10 @@ body {
   height: 100vh;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
+} */
 
 /* width */
 ::-webkit-scrollbar {
@@ -29,9 +29,9 @@ body {
   background: grey; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
