--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
   /* font-family: 'Segoe UI'; */
-  font-family: 'Segoe UI', '-apple-system', 'HelveticaNeue', sans-serif;
+  /* font-family: 'Segoe UI', '-apple-system', 'HelveticaNeue', sans-serif; */
 }
   
 .joinOuterContainer {
