--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -14,7 +14,7 @@
 
 .app-title {
     color: white;
-    font-family: 'Segoe UI', '-apple-system', 'HelveticaNeue', sans-serif;
+    /* font-family: 'Segoe UI', '-apple-system', 'HelveticaNeue', sans-serif; */
     font-size: 120px;
     -webkit-text-stroke: 1px black;
 }
@@ -42,8 +42,8 @@
 
 .login-description {
     background-color: #1ED760;
-    border-radius: 5px;
-    color: black;
+    border-radius: 28px;
+    color: white;
     display: flex;
     font-size: 20px;
     justify-content: center;
