switched seasonal stylings, testing background image for notfoundpage on prod and mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,10 @@ body {
   height: 100vh;
 }
 
+button {
+  font-family: 'Segoe UI', -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 16px;
