--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -32,9 +32,9 @@ input:focus, textarea:focus, select:focus{
 }
 
 .seasonStyling {
-  background: #F37D0F;
+  background: #A92921;
 }
 
 .seasonStylingAlt {
-  background: #FFE01B;
+  background: #0A7533;
 }
