--- a/src/components/InfoBar/InfoBar.css
+++ b/src/components/InfoBar/InfoBar.css
@@ -35,9 +35,9 @@
 }
 
 .seasonStyling {
-  background: #F37D0F;
+  background: #A92921;
 }
 
 .seasonStylingAlt {
-  background: #FFE01B;
+  background: #0A7533;
 }
