--- a/src/components/JoinForm/JoinForm.css
+++ b/src/components/JoinForm/JoinForm.css
@@ -38,11 +38,11 @@
 }
 
 .seasonStyling {
-    background: #F37D0F;
+    background: #A92921;
 }
 
 .seasonStylingAltHeader {
-    border-bottom: 4px groove #FFE01B;
+    border-bottom: 4px groove #0A7533;
 }
 
 .button:hover {
