--- a/src/components/NotFoundPage/NotFoundPage.css
+++ b/src/components/NotFoundPage/NotFoundPage.css
@@ -1,6 +1,10 @@
 .not-found-page-wrapper {
     align-items: center;
     background-color: black;
+    /* background-color: black; */
+    background-image: url("../../images/notFoundPageVaporwaveBackground.png");
+    background-position: center;
+    background-size: cover;
     color: white;
     display: flex;
     flex-direction: column;
