--- a/src/components/TopSongsDescriptions/TopSongsDescriptions.css
+++ b/src/components/TopSongsDescriptions/TopSongsDescriptions.css
@@ -14,9 +14,9 @@
 }
 
 .seasonStyling {
-    background: #F37D0F;
+    background: #A92921;
 }
 
 .seasonStylingAlt {
-    background: #FFE01B;
+    background: #0A7533;
 }
