--- a/src/components/PlaylistStats/PlaylistStats.css
+++ b/src/components/PlaylistStats/PlaylistStats.css
@@ -1,5 +1,10 @@
 .playlistStats {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
     height: 100vh;
+    justify-content: center;
+    width: 100vh;
 }
 
 .playlistStatsTitle {
