--- a/src/components/TabPanel/TabPanel.css
+++ b/src/components/TabPanel/TabPanel.css
@@ -4,7 +4,18 @@
 
 .featureGraphs {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
     grid-gap: 0.7%;
     width: 100%;
+}
+
+.playlistImageWrapper {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.playlistImage {
+    height: 80px;
+    width: 80px;
 }
