--- a/src/components/Pomodoro/Pomodoro.css
+++ b/src/components/Pomodoro/Pomodoro.css
@@ -62,6 +62,14 @@
     padding-bottom: 10px;
 }
 
+.pomodoroHeaderTimer {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-bottom: 10px;
+}
+
 .greetingText {
     font-size: 40px;
 }
