--- a/src/components/Pomodoro/Pomodoro.css
+++ b/src/components/Pomodoro/Pomodoro.css
@@ -37,7 +37,13 @@
 }
 
 .userProfile:hover {
-    text-decoration: underline;
+    animation: fadeIn ease 0.7s;
+    -webkit-animation: fadeIn ease 0.7s;
+    -moz-animation: fadeIn ease 0.7s;
+    -o-animation: fadeIn ease 0.7s;
+    -ms-animation: fadeIn ease 0.7s;
+    background: black;
+    color: white;
 }
 
 .greetingText {
