--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -19,9 +19,12 @@
 }
 
 .app-description {
+    align-items: center;
     color: white;
+    display: flex;
     font-size: 28px;
     font-weight: 700;
+    justify-content: center;
     padding: 80px 0px;
     -webkit-text-stroke: 1px black;
 }
