--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -15,18 +15,18 @@
 .app-title {
     color: white;
     font-size: 120px;
-    -webkit-text-stroke: 1px black;
+    padding-bottom: 140px;
 }
 
 .app-description {
     align-items: center;
     color: white;
     display: flex;
-    font-size: 28px;
+    font-size: 20px;
     font-weight: 700;
     justify-content: center;
-    padding: 80px 0px;
-    -webkit-text-stroke: 1px black;
+    padding-bottom: 20px;
+    padding-top: 60px;
 }
 
 .login-button {
@@ -65,4 +65,8 @@
         height: 100vh;
         width: 100vw;
     }
+
+    /* .app-description {
+        padding: 120px 0px;
+    } */
 }
