--- a/src/components/TopArtistsDescriptions/TopArtistsDescriptions.css
+++ b/src/components/TopArtistsDescriptions/TopArtistsDescriptions.css
@@ -5,11 +5,11 @@
 .tooltip {
     background: #1ED760;
     border: none;
-    border-radius: 1px;
+    border-radius: 4px;
     display: inline-block;
     font-size: 16px;
     margin: 0px 4px;  
-    padding: 2px 10px;  
+    padding: 2px 10px 4px 10px;  
     text-decoration: none;
 }
 
