--- a/src/components/TopSongsDescriptions/TopSongsDescriptions.css
+++ b/src/components/TopSongsDescriptions/TopSongsDescriptions.css
@@ -1,15 +1,16 @@
 .tooltips {
+    border-radius: 8px;
     max-width: 400px;
 }
 
 .tooltip {
     background: #1ED760;
     border: none;
-    border-radius: 1px;
+    border-radius: 4px;
     display: inline-block;
     font-size: 16px;
     margin: 0px 4px;  
-    padding: 2px 10px;  
+    padding: 2px 10px 4px 10px;  
     text-decoration: none;
 }
 
