fixed typo in configurStore.js, and updated .css files for new season

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -21,8 +21,8 @@
 }
 
 .seasonSelect {
-    background-color: #A92921;
-    border: 4px solid #A92921;
+    background-color: #651B0E;
+    border: 4px solid #651B0E;
     color: white;
 }
 
