--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -32,11 +32,11 @@ input:focus, textarea:focus, select:focus{
 }
 
 .seasonStyling {
-  background: #A92921;
+  background: #651B0E;
 }
 
 .seasonStylingAlt {
-  background: #0A7533;
+  background: #E25B6A;
 }
 
 /* width */
