--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -83,9 +83,9 @@
 }
 
 .seasonStyling {
-  background: #A92921;
+  background: #651B0E;
 }
 
 .seasonStylingAlt {
-  background: #0A7533;
+  background: #E25B6A;
 }
