--- a/src/components/Pomodoro/Pomodoro.css
+++ b/src/components/Pomodoro/Pomodoro.css
@@ -67,11 +67,11 @@
 }
 
 .seasonStyling {
-    background-color: #A92921;
-    border-color: #A92921;
+    background-color: #651B0E;
+    border-color: #651B0E;
 }
 
 .seasonStylingAlt {
-    background-color: #0A7533;
-    border-color: #0A7533;
+    background-color: #E25B6A;
+    border-color: #E25B6A;
 }
