--- a/src/components/PomodoroIcons/PomodoroIcons.css
+++ b/src/components/PomodoroIcons/PomodoroIcons.css
@@ -11,11 +11,11 @@
 }
 
 .seasonStylingIcons {
-    color: #A92921;
+    color: #651B0E;
 }
 
 .seasonStylingAltIcons {
-    color: #0A7533;
+    color: #E25B6A;
 }
 
 .pomodoroHeaderTimer {
