--- a/src/components/ProgressBar/ProgressBar.css
+++ b/src/components/ProgressBar/ProgressBar.css
@@ -24,6 +24,6 @@
 }
 
 .seasonStylingAlt {
-    background-color: #0A7533;
-    border-color: #0A7533;
+    background-color: #E25B6A;
+    border-color: #E25B6A;
 }
