--- a/src/components/TopSongs/TopSongs.css
+++ b/src/components/TopSongs/TopSongs.css
@@ -90,17 +90,17 @@
 }
 
 .seasonStyling {
-    background: #A92921;
+    background: #651B0E;
 }
 
 .seasonStylingAlt {
-    background: #0A7533;
+    background: #E25B6A;
 }
 
 .seasonStylingPagination {
-    color: #A92921;
+    color: #651B0E;
 }
 
 .seasonStylingAltPagination {
-    color: #0A7533;
+    color: #E25B6A;
 }
