--- a/src/components/JoinForm/JoinForm.css
+++ b/src/components/JoinForm/JoinForm.css
@@ -42,11 +42,11 @@
 }
 
 .seasonStyling {
-    background: #A92921;
+    background: #651B0E;
 }
 
 .seasonStylingAltHeader {
-    border-bottom: 4px groove #0A7533;
+    border-bottom: 4px groove #E25B6A;
 }
 
 .button:hover {
