--- a/src/components/TopSongsDescriptions/TopSongsDescriptions.css
+++ b/src/components/TopSongsDescriptions/TopSongsDescriptions.css
@@ -25,9 +25,9 @@
 }
 
 .seasonStyling {
-    background: #A92921;
+    background: #651B0E;
 }
 
 .seasonStylingAlt {
-    background: #0A7533;
+    background: #E25B6A;
 }
